--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,6 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0
-  Test::SharedFork: 0.05
   Test::TCP: 0.11
 configure_requires:
   ExtUtils::MakeMaker: 6.42
@@ -26,6 +25,7 @@ requires:
   AnyEvent: 5.201
   Data::MessagePack: 0.08
   Filter::Util::Call: 0
+  perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.05
